--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,14 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("Roboto.woff2") format("woff2"), url("Roboto.woff") format("woff");
+  src: url("./assets/fonts/Roboto.woff2") format("woff2"),
+    url("./assets/fonts/Roboto.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto-italic";
+  src: url("./assets/fonts/Roboto-Italic.woff2") format("woff2"),
+    url("./assets/fonts/Roboto-Italic.woff") format("woff");
 }
 
 .card {
@@ -1147,4 +1154,8 @@ body {
   .pop-exit__form-group {
     display: block;
   }
+}
+
+.change-display {
+  display: none;
 }
