--- a/src/App.css
+++ b/src/App.css
@@ -1160,5 +1160,16 @@ body {
   display: none;
 }
 
-/*
-*/
+.modal-on-display {
+  z-index: 1;
+  width: 170px;
+  background-color: #fff;
+  border: 1px outset #bbb;
+  position: fixed;
+  right: 50px;
+  top: 87px;
+  height: 165px;
+  padding: 15px;
+  border-radius: 15px;
+  box-shadow: 15px 12px 7px -5px #bbb;
+}
