--- a/src/App.css
+++ b/src/App.css
@@ -1160,7 +1160,7 @@ body {
   display: none;
 }
 
-.modal-on-display {
+#user-set-target {
   z-index: 1;
   width: 170px;
   background-color: #fff;
@@ -1172,4 +1172,27 @@ body {
   padding: 15px;
   border-radius: 15px;
   box-shadow: 15px 12px 7px -5px #bbb;
+}
+
+@media screen and (max-width: 1200px) {
+  .main__content {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .main__column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .cards {
+    display: flex;
+    overflow-y: auto;
+    flex-direction: column;
+  }
 }
